initialize prac-app workspace

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ function doSomething() {
 	myText.textContent = "Are you a 0, or are you a 1?";
 }
 </script>
+<h2>test remote</h2>
 
 </body>
 </html>
