--- a/csstemplate.html
+++ b/csstemplate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>Template(CSS)</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -59,6 +59,7 @@ body {
 
 <div class="content">
   <h2>CSS Template</h2>
+  <h3>For the broken hearted.</h3>
   <p>A topnav, content and a footer.</p>
 </div>
 
