--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 <meta charset="utf-8">
-<title>Hello...</title>
+<title>Styled by CSS</title>
 <style type="text/css">
 #mainContent {
 	font-family: Arial, Helvetica, sans-serif;
